force-app/main/default/objects/Maintence_Request__c/Maintence_Request__c.object-meta.xml
<CustomObject>
    <label>Maintance Request</label>
    <nameField>
        <label>Maintence Request Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Maintance Requests</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>