force-app/main/default/objects/Maintence_Request__c/fields/Tenant__c.field-meta.xml
<CustomField>
    <fullName>Tenant__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Tenant</label>
    <referenceTo>Tenant__c</referenceTo>
    <relationshipLabel>Maintance Requests</relationshipLabel>
    <relationshipName>Maintance_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>